--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
+            <div class="tech-grid"></div>
             <div class="about-content">
                 <div class="profile-card">
                     <div class="profile-img">
@@ -121,6 +122,11 @@
 
     <!-- Skills Section -->
     <section id="skills" class="skills">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
         <div class="container">
             <h2>Skills & Technologies</h2>
             <div class="skills-grid">
@@ -228,7 +234,7 @@
                         <!-- Disable captcha -->
                         <input type="hidden" name="_captcha" value="false">
                         <!-- Success page -->
-                        <input type="hidden" name="_next" value="http://localhost:3000/thanks.html">
+                        <input type="hidden" name="_next" value="https://umesh755485.github.io/portfolio/thanks.html">
                         <button type="submit" class="submit-btn">Send Message</button>
                     </form>
                 </div>
